[gd_scene load_steps=9 format=3 uid="uid://lndqn004u2m7"]

[ext_resource type="Texture2D" uid="uid://c3tn2pppny76b" path="res://Themes/nine_color_rect_icon.png" id="1_kodvw"]
[ext_resource type="Script" path="res://BattleScene.gd" id="1_r17if"]
[ext_resource type="Resource" uid="uid://defhgda6tnv8i" path="res://player_info.tres" id="2_baswf"]
[ext_resource type="Texture2D" uid="uid://u2hrn44kkgp6" path="res://Resources/BattleIcons/target.png" id="2_c76t2"]
[ext_resource type="Theme" uid="uid://nh2gs2ko17dl" path="res://Themes/main_theme.tres" id="5_dka4d"]

[sub_resource type="Animation" id="Animation_1p1n2"]
resource_name = "open_battle_screen"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(3, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7q51o"]
_data = {
"open_battle_screen": SubResource("Animation_1p1n2")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_43atc"]

[node name="BattleScene" type="NinePatchRect"]
self_modulate = Color(0.615686, 0.807843, 1, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 410.0
offset_top = 420.0
offset_right = -412.0
offset_bottom = -82.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(165, 170)
texture = ExtResource("1_kodvw")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2
script = ExtResource("1_r17if")
player_info = ExtResource("2_baswf")

[node name="TurnOrder" type="Node2D" parent="."]

[node name="Target" type="Sprite2D" parent="."]
visible = false
position = Vector2(47, 169)
texture = ExtResource("2_c76t2")

[node name="PlayerLocation" type="Marker2D" parent="."]
position = Vector2(105, 120)

[node name="Monster1Location" type="Marker2D" parent="."]
position = Vector2(240, 60)

[node name="Monster2Location" type="Marker2D" parent="."]
position = Vector2(260, 100)

[node name="Monster3Location" type="Marker2D" parent="."]
position = Vector2(280, 140)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7q51o")
}

[node name="Health" type="Label" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 13.3333
offset_right = 55.0
offset_bottom = 36.3333
theme = ExtResource("5_dka4d")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_43atc")
